Made teacher widget open modal on click

--- a/style.css
+++ b/style.css
@@ -20,3 +20,9 @@
     font-family: FontAwesome;
     float:left;
 }
+.widget .slsw-teacher {
+    text-align: center;
+}
+.widget .slsw-teacher-title {
+    line-height: 2.5;
+}
